# uvpypackages

./: .dockerignore  .gitignore  AGENTS.md  README.md
namespaces/: create.sh
namespaces/titan/: README.md  pyproject.toml
namespaces/titan-workspace/: README.md  pyproject.toml
